<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/Rating_system"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14">

            <RadioButton
                android:id="@+id/sys_balls"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="Баллы"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/sys_true_answers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Точные ответы"
                android:textColor="@color/black" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="Система оценивания:"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Switch_Timer" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Обложка_теста"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Категория_теста"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Test_Description" />

        <EditText
            android:id="@+id/Test_Time"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="0"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/Switch_Timer"
            app:layout_constraintStart_toEndOf="@+id/Switch_Timer"
            app:layout_constraintTop_toTopOf="@+id/Switch_Timer" />

        <EditText
            android:id="@+id/Test_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:maxLength="45"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/Название_теста"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Описание_теста"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Test_Name" />

        <Spinner
            android:id="@+id/Test_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <ImageView
            android:id="@+id/Test_Picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/back_for_image_view"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/Create_test_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/back_for_button"
            android:onClick="Save_test_info"
            android:text="@string/Следующий_этап"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rating_system"
            app:layout_constraintVertical_bias="0.99" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textAlignment="center"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Test_Picture"
            app:layout_constraintEnd_toEndOf="@+id/Test_Picture"
            app:layout_constraintStart_toStartOf="@+id/Test_Picture"
            app:layout_constraintTop_toTopOf="@+id/Test_Picture" />

        <MultiAutoCompleteTextView
            android:id="@+id/Test_Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLength="650"
            android:maxLines="7"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Switch
            android:id="@+id/Switch_Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:showText="false"
            android:text="@string/Таймер"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Test_Picture" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="мин."
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/Switch_Timer"
            app:layout_constraintStart_toEndOf="@+id/Test_Time"
            app:layout_constraintTop_toTopOf="@+id/Switch_Timer" />

        <ImageView
            android:id="@+id/go_forward_from_add_test"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/Create_test_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Create_test_info"
            app:srcCompat="@drawable/forward" />

        <Button
            android:id="@+id/Save_test_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:background="@drawable/back_for_button"
            android:onClick="Save_test_info"
            android:text="Сохранить"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/Create_test_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Create_test_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>